--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -10,7 +10,22 @@
     symfony_web_dir: "{{ symfony_root_dir }}/public"
     symfony_var_dir: "{{ symfony_root_dir }}/var"
 
+  vars_prompt:
+    - name: symfony_env
+      prompt: "Enter the enviromment for your Symfony app (prod|dev|test)"
+      default: prod
+      private: no
+
+  environment:
+    SYMFONY_ENV: "{{ symfony_env|lower }}"
+
   pre_tasks:
+    - name: Convert entered Symfony environment to lowercase
+      set_fact:
+        symfony_env: "{{ symfony_env|lower }}"
+      tags:
+        - always
+
     - name: Install python for Ansible
       become: true
       raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
@@ -96,33 +111,67 @@
         owner: "{{ ansible_user }}"
         group: "{{ ansible_user }}"
         recurse: yes
+      tags:
+        - deploy
 
     - name: Checkout Git repository
       git:
         repo: https://github.com/symfony/demo.git
         dest: "{{ symfony_root_dir }}"
         force: yes
+      tags:
+        - deploy
+
+    - name: Check for Composer
+      stat:
+        path: /usr/local/bin/composer
+      register: composer_stat
+      tags:
+        - deploy
 
     - name: Download Composer
       script: scripts/install_composer.sh
+      when: not composer_stat.stat.exists
+      tags:
+        - deploy
 
     - name: Move Composer globally
       become: true
       command: mv composer.phar /usr/local/bin/composer
+      when: not composer_stat.stat.exists
+      tags:
+        - deploy
 
     - name: Set permissions on Composer
       become: true
       file:
         path: /usr/local/bin/composer
         mode: "a+x"
+      when: not composer_stat.stat.exists
+      tags:
+        - deploy
+
+    - name: Make sure composer is at its latest version
+      composer:
+        working_dir: "{{ symfony_root_dir }}"
+        command: self-update
+      register: composer_self_update
+      changed_when: "not composer_self_update.stdout is search('You are already using composer version')"
+      tags:
+        - deploy
 
     - name: Install Composer's dependencies
       composer:
         working_dir: "{{ symfony_root_dir }}"
-        no_dev: no
+        no_dev: "{{ 'yes' if('prod' == symfony_env) else 'no' }}"
+      tags:
+        - deploy
 
-    - name: Switch Symfony Demo to Mode Prod
-      command: '{{ symfony_console_path }} cache:clear --env=prod --no-debug'
+    - name: Switch Symfony Demo to Mode Prod and Clear cache
+      command: '{{ symfony_console_path }} cache:clear --env={{ symfony_env }}'
+      changed_when: false
+      tags:
+        - deploy
 
     - name: Add Symfony config template to the Nginx available sites
       become: true
@@ -151,6 +200,9 @@
         state: directory
         mode: 0777
         recurse: yes
+      tags:
+        - permissions
+        - deploy
 
   handlers:
     - name: Restart Nginx
